# magma

.circleci/: config.yml
.devcontainer/: Dockerfile
.devcontainer/bazel-base/: Dockerfile
.github/workflows/: agw-docker-load-test.yml  agw-workflow.yml  amis-workflow.yml  autolabel-pullrequests.yml  backport-pull-request.yml  bazel.yml  build_all.yml  check-rebase.yml  cloud-workflow.yml  codeowners-syntax.yml  codeql-analysis.yml  comment-pr-on-check-failure.yml  cwag-workflow.yml  cwf-integ-test.yml  cwf-operator.yml  dco-check.yml  deploy-build-from-pr.yml  docker-builder-devcontainer.yml  docker-builder-python-precommit.yml  docs-workflow.yml  docusaurus-workflow.yml  dp-workflow.yml  federated-integ-test.yml  feg-workflow.yml  fossa-workflow.yml  gcc-problems.yml  golang-build-test.yml  helm-chart-dependency-check.yml  helm-deploy-on-demand.yml  insync-checkin.yml  lte-integ-test-bazel.yml  lte-integ-test.yml  nms-workflow.yml  pr_bot.yml  python-workflow.yml  reviewdog-workflow.yml  semantic-pr.yml  unit-test-workflow.yml
bazel/: go_repositories.bzl
cwf/gateway/docker/python/: Dockerfile
docs/readmes/basics/: prerequisites.md
docs/readmes/lte/: deploy_install_docker.md
dp/cloud/docker/python/radio_controller/: Dockerfile
dp/cloud/go/dp/: BUILD.bazel
dp/cloud/go/protos/: BUILD.bazel
dp/cloud/go/services/dp/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/action_generator/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/action_generator/action/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/action_generator/sas/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/action_generator/sas/eirp/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/action_generator/sas/frequency/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/action_generator/sas/grant/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/protos/active_mode/: BUILD.bazel
dp/cloud/go/services/dp/active_mode_controller/time/: BUILD.bazel
dp/cloud/go/services/dp/builders/: BUILD.bazel
dp/cloud/go/services/dp/dp/: BUILD.bazel
dp/cloud/go/services/dp/logs_pusher/: BUILD.bazel
dp/cloud/go/services/dp/obsidian/cbsd/: BUILD.bazel
dp/cloud/go/services/dp/obsidian/log/: BUILD.bazel
dp/cloud/go/services/dp/obsidian/models/: BUILD.bazel
dp/cloud/go/services/dp/obsidian/to_pointer/: BUILD.bazel
dp/cloud/go/services/dp/servicers/: BUILD.bazel
dp/cloud/go/services/dp/storage/: BUILD.bazel
dp/cloud/go/services/dp/storage/db/: BUILD.bazel
dp/cloud/go/services/dp/storage/dbtest/: BUILD.bazel
feg/gateway/registry/: BUILD.bazel
lte/cloud/go/protos/: BUILD.bazel
lte/gateway/c/core/oai/tasks/ngap/: ngap_amf_handlers.c
lte/gateway/c/core/oai/tasks/s1ap/: s1ap_mme_handlers.cpp
lte/gateway/configs/: pipelined.yml  pipelined.yml_prod
lte/gateway/deploy/: agw_install_docker.sh
lte/gateway/deploy/roles/dev_common/tasks/: main.yml
lte/gateway/deploy/roles/magma/tasks/: main.yml
lte/gateway/docker/: docker-compose.override.yaml
lte/gateway/docker/services/c/: Dockerfile
lte/gateway/docker/services/python/: Dockerfile
lte/gateway/python/integ_tests/: defs.mk
lte/gateway/python/magma/pipelined/: rpc_servicer.py  subscriberdb_client.py
lte/gateway/python/magma/pipelined/qos/: common.py  qos_tc_impl.py
lte/gateway/python/magma/pipelined/tests/: test_qfi_gtp.py
nms/: package.json
nms/app/: package.json
orc8r/cloud/go/: go.mod  go.sum
orc8r/gateway/go/: go.mod
orc8r/gateway/go/config/: BUILD.bazel
orc8r/gateway/go/mconfig/: BUILD.bazel
orc8r/gateway/go/services/bootstrapper/: BUILD.bazel
orc8r/gateway/go/services/bootstrapper/gateway_info/: BUILD.bazel
orc8r/gateway/go/services/bootstrapper/service/: BUILD.bazel
orc8r/gateway/go/services/configurator/: BUILD.bazel
orc8r/gateway/go/services/configurator/service/: BUILD.bazel
orc8r/gateway/go/services/magmad/: BUILD.bazel
orc8r/gateway/go/services/magmad/service/: BUILD.bazel
orc8r/gateway/go/services/magmad/service/generic_command/: BUILD.bazel
orc8r/gateway/go/services/magmad/service/ping/: BUILD.bazel
orc8r/gateway/go/services/magmad/service_manager/: BUILD.bazel
orc8r/gateway/go/services/magmad/status/: BUILD.bazel
orc8r/gateway/go/services/sync_rpc/service/: BUILD.bazel
orc8r/gateway/go/status/: BUILD.bazel
orc8r/gateway/go/streamer/: BUILD.bazel
orc8r/lib/go/build_info/: BUILD.bazel
orc8r/lib/go/definitions/: BUILD.bazel
orc8r/lib/go/profile/: BUILD.bazel
orc8r/lib/go/protos/: BUILD.bazel  identity_helper.go
orc8r/lib/go/registry/: BUILD.bazel
orc8r/lib/go/registry/client/: BUILD.bazel
orc8r/lib/go/security/: BUILD.bazel
orc8r/lib/go/security/cert/: BUILD.bazel
orc8r/lib/go/security/csr/: BUILD.bazel
orc8r/lib/go/security/key/: BUILD.bazel
orc8r/lib/go/service/: service.go
orc8r/protos/: BUILD.bazel
orc8r/tools/ansible/roles/pkgrepo/tasks/: main.yml
