# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "status",
    srcs = [
        "definitions.go",
        "gateway_status.go",
        "host_info.go",
    ],
    importpath = "magma/gateway/status",
    visibility = ["//visibility:public"],
    deps = [
        "//orc8r/gateway/go/config",
        "//orc8r/gateway/go/mconfig",
        "//orc8r/lib/go/security/cert",
        "@com_github_emakeev_snowflake//:go_default_library",
        "@com_github_golang_glog//:glog",
        "@com_github_shirou_gopsutil_v3//cpu",
        "@com_github_shirou_gopsutil_v3//disk",
        "@com_github_shirou_gopsutil_v3//host",
        "@com_github_shirou_gopsutil_v3//mem",
        "@com_github_shirou_gopsutil_v3//net",
        "@com_github_vishvananda_netlink//:go_default_library",
    ],
)
