# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protos",
    srcs = [
        "digest_helper.go",
        "fillin.go",
        "identity_helper.go",
        "marshaler.go",
        "mconfig_digest.go",
        "metricsd_helper.go",
    ],
    embed = [
        "//orc8r/protos:go_protos",
    ],
    importpath = "magma/orc8r/lib/go/protos",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
    ],
)

go_library(
    name = "fillin",
    srcs = ["fillin.go"],
    importpath = "magma/orc8r/lib/go/protos",
    visibility = ["//visibility:public"],
)

go_test(
    name = "fill_in_test",
    srcs = ["fill_in_test.go"],
    deps = [
        ":fillin",
        "@com_github_stretchr_testify//assert",
    ],
)

go_library(
    name = "marshaler",
    srcs = ["marshaler.go"],
    embed = ["//orc8r/protos:common_go_proto"],
    importpath = "magma/orc8r/lib/go/protos",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "marshaler_test",
    srcs = ["marshaler_test.go"],
    deps = [
        ":marshaler",
        "//orc8r/lib/go/protos/mconfig",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_stretchr_testify//assert",
    ],
)
