# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

# This library is needed to satisfy the side-effect imports of
# this package. E.g. in orc8r/lib/go/service/config/service_config.go
go_library(
    name = "security",
    importpath = "magma/orc8r/lib/go/security",
    visibility = ["//visibility:public"],
    deps = [
        "//orc8r/lib/go/security/cert",
        "//orc8r/lib/go/security/csr",
        "//orc8r/lib/go/security/key",
    ],
)
