# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# This library is needed to satisfy the side-effect imports of
# this package. E.g. in orc8r/lib/go/service/config/service_config.go
go_library(
    name = "configurator_lib",
    srcs = [
        "main.go",
    ],
    importpath = "magma/gateway/services/configurator",
    visibility = ["//visibility:public"],
    deps = [
        "//orc8r/gateway/go/config",
        "//orc8r/gateway/go/service_registry",
        "//orc8r/gateway/go/services/bootstrapper/gateway_info",
        "//orc8r/gateway/go/services/bootstrapper/service",
        "//orc8r/gateway/go/services/configurator/service",
        "//orc8r/lib/go/security/key",
        "@com_github_emakeev_snowflake//:snowflake",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//backoff",
        "@org_golang_google_grpc//credentials",
    ],
)

go_binary(
    name = "configurator",
    embed = [":configurator_lib"],
    visibility = ["//visibility:public"],
)
