# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "magmad_lib",
    srcs = [
        "main.go",
        "service/generic_command/command.go",
        "service/magmad.go",
        "service/ping/ping.go",
        "service_manager/docker_controller.go",
        "service_manager/initd_controller.go",
        "service_manager/runit_controller.go",
        "service_manager/service_controller.go",
        "service_manager/service_manager.go",
        "service_manager/systemd_controller.go",
        "status/metrics.go",
        "status/metrics_queue.go",
        "status/poller.go",
        "status/reporter.go",
    ],
    importpath = "magma",
    visibility = ["//visibility:private"],
    deps = [
        "//orc8r/gateway/go/config",
        "//orc8r/gateway/go/services/bootstrapper",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "magmad",
    embed = [":magmad_lib"],
    goos = "linux",
    visibility = ["//visibility:public"],
)
