# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "magmad_lib",
    srcs = [
        "main.go",
    ],
    importpath = "magma",
    visibility = ["//visibility:private"],
    deps = [
        "//orc8r/gateway/go/config",
        "//orc8r/gateway/go/service_registry",
        "//orc8r/gateway/go/services/bootstrapper/gateway_info",
        "//orc8r/gateway/go/services/bootstrapper/service",
        "//orc8r/gateway/go/services/configurator/service",
        "//orc8r/gateway/go/services/magmad/service",
        "//orc8r/gateway/go/services/magmad/service/ping",
        "//orc8r/gateway/go/services/magmad/service_manager",
        "//orc8r/gateway/go/services/magmad/status",
        "//orc8r/gateway/go/services/sync_rpc/service",
        "//orc8r/lib/go/build_info",
        "//orc8r/lib/go/definitions",
        "//orc8r/lib/go/profile",
        "//orc8r/lib/go/protos",
        "@com_github_aeden_traceroute//:go_default_library",
        "@com_github_emakeev_snowflake//:go_default_library",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//ptypes/struct",
        "@com_github_google_shlex//:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
        "@com_github_prometheus_client_model//go",
    ],
)

go_binary(
    name = "magmad",
    embed = [":magmad_lib"],
    visibility = ["//visibility:public"],
)
