load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "active_mode_controller",
    srcs = ["app.go"],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/active_mode_controller",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_test(
    name = "active_mode_controller_test",
    srcs = ["app_test.go"],
)
