load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "builders",
    srcs = ["builders.go"],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/builders",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_protobuf//types/known/wrapperspb"],
)
