load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "servicers",
    srcs = [
        "cbsd_manager.go",
        "db_field_setters.go",
        "sql_to_proto_fields.go",
    ],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/servicers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

go_test(
    name = "servicers_test",
    srcs = ["cbsd_manager_test.go"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//suite",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
