# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service_manager",
    srcs = [
        "docker_controller.go",
        "initd_controller.go",
        "runit_controller.go",
        "service_controller.go",
        "service_manager.go",
        "systemd_controller.go",
    ],
    importpath = "magma/gateway/services/magmad/service_manager",
    visibility = ["//visibility:public"],
    deps = [
        "//orc8r/gateway/go/config",
        "@com_github_golang_glog//:glog",
    ],
)
