load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cbsd",
    srcs = ["handlers.go"],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/obsidian/cbsd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_golang_glog//:glog",
        "@com_github_labstack_echo_v4//:echo",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

go_test(
    name = "cbsd_test",
    srcs = ["handlers_test.go"],
    deps = [
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//suite",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
