load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = ["handlers.go"],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/obsidian/log",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_olivere_elastic_v7//:go_default_library",
    ],
)

go_test(
    name = "log_test",
    srcs = ["handlers_test.go"],
    embed = [":log"],
    deps = [
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//suite",
    ],
)
