load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "to_pointer",
    srcs = ["to_pointer.go"],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/obsidian/to_pointer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
