load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dbtest",
    srcs = ["resource.go"],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/storage/dbtest",
    visibility = ["//visibility:public"],
    deps = ["@com_github_masterminds_squirrel//:go_default_library"],
)
