# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "generic_command",
    srcs = [
        "command.go",
    ],
    importpath = "magma/gateway/services/magmad/service/generic_command",
    visibility = ["//visibility:public"],
    deps = [
        "//orc8r/gateway/go/config",
        "//orc8r/lib/go/protos",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//ptypes/struct",
        "@com_github_google_shlex//:go_default_library",
    ],
)
