load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "active_mode",
    srcs = ["active_mode.pb.go"],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/active_mode_controller/protos/active_mode",
    visibility = ["//visibility:public"],
    deps = [
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
