load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eirp",
    srcs = ["calculator.go"],
    importpath = "github.com/magma/magma/dp/cloud/go/services/dp/active_mode_controller/action_generator/sas/eirp",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_exp//constraints"],
)

go_test(
    name = "eirp_test",
    srcs = ["calculator_test.go"],
    deps = ["@com_github_stretchr_testify//assert"],
)
